deploy/k8s/mongodb/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: podwise
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker3
      containers:
        - name: mongo-express
          image: mongo-express:latest
          ports:
            - containerPort: 8081
