deploy/k8s/mongodb/mongo-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  namespace: podwise
  labels:
    app: mongo-express
spec:
  type: NodePort
  selector:
    app: mongo-express
  ports:
    - protocol: TCP
      port: 8081           # 對外提供的服務 port（容器內部的服務 port）
      targetPort: 8081     # 容器內部實際 port
      nodePort: 30018      # 外部使用者可以透過此 port 存取（ex: http://<NodeIP>:30018）
