deploy/k8s/mongodb/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: podwise
  labels:
    app: mongodb
spec:
  type: NodePort
  selector:
    app: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
      nodePort: 30017
