deploy/k8s/mongodb/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
  namespace: podwise
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: mongo.192.168.32.161.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express
                port:
                  number: 8081
